<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/tva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal1" />
    
    <EditText
        android:id="@+id/eta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView 
        android:id="@+id/tvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal2" />
    
    <EditText
        android:id="@+id/etb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView 
        android:id="@+id/tvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soal3" />
    
    <EditText
        android:id="@+id/etc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
    
    <TextView 
        android:id="@+id/tvhasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
