<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math1" />
    
    <EditText
        android:id="@+id/et1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btnhasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check" />
    
    <TextView 
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math2" />
    
    <EditText
        android:id="@+id/et2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btnhasil2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check" />
    
    <TextView 
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/math3" />
    
    <EditText
        android:id="@+id/et3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btnhasil3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check" />

</LinearLayout>
